fix firefox view topbar overflow

--- a/src/Base/Base.scss
+++ b/src/Base/Base.scss
@@ -29,7 +29,7 @@
 
     &::before {
       content: '';
-      width: 36px;
+      width: 100%;
       height: 2px;
       top: 0;
       left: 0;
